crates/alder-parse/src/item/snapshots/alder_parse__item__fn___tests__params_single.snap
---
source: crates/alder-parse/src/item/fn_.rs
description: (x)
---
[
    Param {
        pattern: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 2,
                },
                end: Position {
                    line: 1,
                    column: 3,
                },
            },
            value: Var(
                "x",
            ),
        },
        annotation: None,
    },
]
