crates/alder-parse/src/item/snapshots/alder_parse__item__fn___tests__params_single_annotation.snap
---
source: crates/alder-parse/src/item/fn_.rs
description: "(count: Number)"
---
[
    Param {
        pattern: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 2,
                },
                end: Position {
                    line: 1,
                    column: 7,
                },
            },
            value: Var(
                "count",
            ),
        },
        annotation: Some(
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 9,
                    },
                    end: Position {
                        line: 1,
                        column: 15,
                    },
                },
                value: Named {
                    path: Path {
                        segments: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 9,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 15,
                                    },
                                },
                                value: "Number",
                            },
                        ],
                    },
                    args: [],
                },
            },
        ),
    },
]
