crates/alder-parse/src/item/snapshots/alder_parse__item__fn___tests__params_trailing_comma.snap
---
source: crates/alder-parse/src/item/fn_.rs
description: "(a, b,)"
---
[
    Param {
        pattern: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 2,
                },
                end: Position {
                    line: 1,
                    column: 3,
                },
            },
            value: Var(
                "a",
            ),
        },
        annotation: None,
    },
    Param {
        pattern: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 5,
                },
                end: Position {
                    line: 1,
                    column: 6,
                },
            },
            value: Var(
                "b",
            ),
        },
        annotation: None,
    },
]
