crates/alder-parse/src/item/snapshots/alder_parse__item__fn___tests__params_typed.snap
---
source: crates/alder-parse/src/item/fn_.rs
description: "(a: Number, b: String)"
---
[
    Param {
        pattern: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 2,
                },
                end: Position {
                    line: 1,
                    column: 3,
                },
            },
            value: Var(
                "a",
            ),
        },
        annotation: Some(
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 5,
                    },
                    end: Position {
                        line: 1,
                        column: 11,
                    },
                },
                value: Named {
                    path: Path {
                        segments: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 5,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 11,
                                    },
                                },
                                value: "Number",
                            },
                        ],
                    },
                    args: [],
                },
            },
        ),
    },
    Param {
        pattern: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 13,
                },
                end: Position {
                    line: 1,
                    column: 14,
                },
            },
            value: Var(
                "b",
            ),
        },
        annotation: Some(
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 16,
                    },
                    end: Position {
                        line: 1,
                        column: 22,
                    },
                },
                value: Named {
                    path: Path {
                        segments: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 16,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 22,
                                    },
                                },
                                value: "String",
                            },
                        ],
                    },
                    args: [],
                },
            },
        ),
    },
]
